--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "uploadthing": "^5.3.0",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
